syntax = "proto3";

option csharp_namespace = "RemoteFileManager.Contracts.Auth";

import "Protos/common.proto";

// Authentication Service
service AuthService {
  // Login with username and password
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Logout and invalidate token
  rpc Logout(LogoutRequest) returns (OperationResult);
  
  // Validate if token is still valid
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// ============= Messages =============

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
  UserInfo user_info = 4;
}

message UserInfo {
  int32 id = 1;
  string username = 2;
  string role = 3;  // "User" or "Admin"
}

message LogoutRequest {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  UserInfo user_info = 2;
}